# flameiq-core

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  CODE_OD_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  GOVERNANCE.rst  INSTALL.txt  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  RFC_PROCESS.rst  SECURITY.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
docs/source/: changelog.rst  conf.py  index.rst  security.rst
docs/source/_static/: custom.css
docs/source/api/: core.rst  engine.rst  providers.rst  reporting.rst  schema.rst  storage.rst
docs/source/architecture/: layers.rst  overview.rst  schema.rst
docs/source/cli/: reference.rst
docs/source/contributing/: development.rst  rfc_process.rst  testing_standards.rst
docs/source/getting_started/: ci_integration.rst  installation.rst  quickstart.rst
docs/source/guides/: baseline_strategies.rst  configuration.rst  custom_provider.rst
docs/source/specs/: exit-codes.rst  schema-v1.rst  statistical-methodology.rst  threshold-algorithm.rst
flameiq/: __init__.py
flameiq/cli/: __init__.py  main.py
flameiq/cli/commands/: __init__.py  baseline.py  compare.py  init.py  report.py  run.py  validate.py
flameiq/core/: __init__.py  comparator.py  errors.py  models.py  thresholds.py
flameiq/engine/: __init__.py  baseline.py  statistics.py
flameiq/providers/: __init__.py  base.py  json_provider.py  pytest_provider.py  registry.py
flameiq/reporting/: __init__.py  html_generator.py
flameiq/schema/: __init__.py
flameiq/schema/v1/: __init__.py  models.py
flameiq/storage/: __init__.py  baseline_store.py
tests/: conftest.py
tests/fixtures/: test_fixtures.py
tests/integration/: test_pipeline.py
tests/statistical/: test_algorithms.py
tests/unit/test_cli/: test_cli.py
tests/unit/test_core/: test_comparator.py
tests/unit/test_engine/: test_engine.py
tests/unit/test_schema/: test_models.py
tests/unit/test_storage/: test_storage_providers.py
